# emojify

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
Formula/: emojify.rb  l33t0-emojify.rb
docs/plans/: 2026-03-01-split-subcommand-design.md  2026-03-01-split-subcommand-plan.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  platform.rs  render.rs  tui.rs  upload.rs
src/render/: composite.rs  gif.rs  gradient.rs  image.rs  split.rs  text.rs
src/tui/: app.rs
src/upload/: discord.rs  slack.rs
tests/: cli_tests.rs  render_tests.rs
