[package]
name = "l33t0-emojify"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
description = "Generate platform-compatible custom emoji images from text, images, or stdin"
authors = ["Stefan Obradovic <me@l33t0.dev>"]
license = "MIT"
repository = "https://github.com/l33t0/emojify"

[[bin]]
name = "emojify"
path = "src/main.rs"

[dependencies]
ab_glyph = "0.2"
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
dirs = "6"
image = { version = "0.25", features = ["png", "gif", "webp"] }
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
